# Adobe_Round1B

./: .dockerignore  .gitignore  Dockerfile  README.md  approach_explanation.md  badal_main.py  challenge1b_output.json  docker-compose.yaml  export_e5_to_onnx.py  export_onnxtitle.py  main.py  main1.py  model_utils_bge.py  output_builder.py  pdf_utils.py  pyproject.toml  requirements.txt  scoring_utils.py  title_utils.py
export_functions/: export_to_onnx1.py
optimized_util/: embedding_generator.py  output_builder.py  pdf_processor.py  text_utils.py
scripts/: export_onnx.py
utils/: model_utils.py  model_utils_e5.py  pdf_utils.py
