[project]
name = "adobe-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "pymupdf>=1.26.3",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21.2",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
]
